--- a/config-server/src/main/resources/bootstrap.properties
+++ b/config-server/src/main/resources/bootstrap.properties
@@ -1,2 +1,3 @@
 server.port=8888
-spring.cloud.config.server.git.uri: file://E:/data/git-repo/config-server-repo
+#spring.cloud.config.server.git.uri: file://E:/data/git-repo/spring-config-server-repo
+spring.cloud.config.server.git.uri: https://github.com/prettysoldier/spring-config-server-repo.git
